# sintine

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
scripts/: run.sh
src/: button.c  button.h  client.c  client.h  crosshair.c  crosshair.h  game.c  game.h  screen_create_room.c  screen_deploy.c  screen_join_room.c  screen_play.c  screen_wait_deploy.c  screen_wait_room.c  screen_welcome.c  screens.h  sea.c  sea.h  ship.c  ship.h  style.h
